<resources>
    <string name="about">About</string>
    <string name="about_abington_committees">About Abington\'s EAC &amp; STC</string>
    <string name="contact">Contact Us</string>
    <string name="my_ggrc">My GGRC</string>
    <string name="my_go_green_card">My GoGreen Rewards Card</string>
    <string name="go_green_rewards">GoGreen Rewards</string>
    <string name="calendar">Calendar</string>
    <string name="events">Events</string>
    <string name="edu_programs">Educational Programs</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="shade_tree_commission"><b><u>Shade Tree Commission</u></b></string>
    <string name="stc">STC</string>
    <string name="log_in">Log In</string>
    <string name="email_us_at">Email us at: </string>
    <string name="email_address">eac.abington@gmail.com</string>
    <string name="visit_us">Visit us at:</string>
    <string name="website_address">https://sites.google.com/site/eacabington/</string>
    <string name="social_media_heading">Social Media</string>
    <string name="like_us_on_fb">Like Us On Facebook</string>
    <string name="website_link"><![CDATA[https://sites.google.com/site/eacabington/]]></string>
    <string name="email_link"><![CDATA[eac.abington@gmail.com]]></string>
    <string name="stc_website_link"><![CDATA[http://www.abington.org/government/shade-tree-commission]]></string>
    <string name="stc_email_link"><![CDATA[abingtontrees@gmail.com]]></string>
    <string name="stc_about_header">About the STC</string>
    <string name="google_photos_album_link">[CDATA[https://get.google.com/albumarchive/113499882242178931932]]</string>
    <string name="app_name">Abington EAC</string>
    <string name="app_name_underlined"><b><u>Abington EAC</u></b></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Abington Township EAC</string>
    <string name="nav_header_subtitle">eac.abington@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">About the EAC</string>
    <string name="about_the_eac">About the EAC</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_photo_gallery">Photo Gallery</string>
    <string name="eac_logo_descriptor">Abington EAC Logo</string>
    <string name="welcome_message">
        <b>"Welcome to the Abington Township Environmental Advisory Council (EAC) and Shade Tree"
            "Commission (STC) mobile app!\n\n"</b>
        "The EAC and STC work together to provide a clean and healthy environment for residents in"
        " our community through various programs outlined in this app.\n\n"
        "Public meetings are usually held the second Wednesday of the month at 7:30 pm at the"
        " township building.\n\n"

        "The meetings are open to the public and we welcome your comments and suggestions."

        
        "\n"

    </string>
    <string name="about_eac_information">

        <b><u>"Environmental Advisory Council\n\n"</u></b>
        "The EAC was formally created in 1974 and the Council’s charge is found in Chapter 10 of"
        "the Code of the Township of Abington. Some of these responsibilities now fall under the"
        "preview of a township department rather than the volunteer EAC board. The EAC consists"
        "of seven township residents appointed by the Board of Commissioners. Each member serves"
        "as a volunteer on the Council for a term of 3 years.\n\n"

        <b>"Current EAC members include:\n\n"</b>
         "Jennifer Sherwood, Chairperson\n"
        "Susan Myerov, Vice Chairperson\n"
        "Jim Webb, Secretary\n"
        "Michele Kaczalek, Treasurer\n"
        "Cakky Braun-Evans\n"
        "Karin McGarry-Rosen\n"
        "John Sorrentino\n\n"

        <b>"Thank you to our former chairpersons:\n"</b>
        "Cathy Gauthier, 2005-2010, and\n"
        "Robert W. Montgomery Jr., 1980-2005.\n\n"

        "Any Abington resident is welcome to become an EAC Associate Member."
        "Associate Members are renewed on an annual basis. Contact us for info."

        
        "\n\n"

    </string>
    <string name="about_stc_information">
        <b><u>"Shade Tree Commission\n\n"</u></b>
        "Visit the STC's website at www.abingtontrees.org."
        "The STC was created in 1975 and the Commission’s duties are provided in Chapter 42 of the"
        "Code of the Township of Abington. Some of these responsibilities fall under the"
        "auspices of a township department rather than the volunteer STC board.\n\n"
        "The STC is comprised of three township residents appointed by the Board of"
        "Commissioners.\n\n"
        "Each member serves as a volunteer on the Commission for a term of 5 years.\n\n"

        <b>"Current STC members include:\n\n"</b>
        "Rita Stevens, Chairperson - abingtontrees@gmail.com\n\n"
        <b>"Thank you to former chairperson George Mott, 1996-2010."</b>

        
        "\n\n"

    </string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet"
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color,"
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_tabbed_about">TabbedAbout</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="menu_title">Menu</string>
    <string name="home">Home</string>
    <string name="social_media_abington_eac">"@Abington.EAC"</string>
</resources>