<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        android:id="@+id/main_menu_group">
        <item android:title="@string/menu_title">
            <menu android:id="@+id/menu">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home_white_24dp"
                    android:title="@string/home" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/menu_about"
                    android:title="@string/about" />
                <item
                    android:id="@+id/nav_ggrc"
                    android:icon="@drawable/menu_ggrc"
                    android:title="@string/my_ggrc" />
                <item
                    android:id="@+id/nav_programs"
                    android:icon="@drawable/menu_calendar"
                    android:title="@string/calendar" />
                <item
                    android:id="@+id/nav_contact"
                    android:icon="@drawable/menu_contact"
                    android:title="@string/contact" />
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/menu_photo_gallery"
                    android:title="@string/photo_gallery" />
            </menu>
        </item>
    </group>

    <group
        android:checkableBehavior="single"
        android:id="@+id/social_media_group"
        android:menuCategory="secondary">
        <item
            android:id="@+id/social_media_header"
            android:title="@string/social_media_heading">
            <menu>
                <item
                    android:id="@+id/nav_like_us_on_fb"
                    android:icon="@drawable/ic_facebook_outline_24dp"
                    android:title="@string/like_us_on_fb" />
                <item
                    android:id="@+id/nav_caption"
                    android:title="@string/social_media_abington_eac" />
            </menu>
        </item>
    </group>

</menu>
